# Comp_Math

./: .gitignore  Lab1.py  Lab2.py  Lab4.py  main.py  pyproject.toml
lab1/: lab1_bisection.py  lab1_newton.py  lab1_simple_iteration.py  lab1_step_method.py
lab2/: lab2_gauss.py  lab2_jacobi.py  lab2_seidel.py
lab3/: lab3_lagrange.py  lab3_newton.py
lab4/: lab4_rectangle.py  lab4_simpson.py  lab4_trapezoidal.py
reports/: 21-ВМз-4_Халеев_АА_Лаб1(Выч.Мат.).docx  21-ВМз-4_Халеев_АА_Лаб2(Выч.Мат.).docx  21-ВМз-4_Халеев_АА_Лаб3(Выч.Мат.).docx  21-ВМз-4_Халеев_АА_Лаб4(Выч.Мат.).docx  Solutions.xlsx
tasks and reports/: 21-ВМз-4_Халеев_АА_Лаб1(Выч.Мат.).docx  21-ВМз-4_Халеев_АА_Лаб2(Выч.Мат.).docx  Solutions.xlsx  ~$нкратова_Суркова_УП_ВычМат.docx  ~$ч_мат_методичка_лаб_работы.docx  Выч_мат_методичка_лаб_работы.docx  Панкратова_Суркова_УП_ВычМат.docx
