[tool.poetry]
name = "comp-math"
version = "0.1.0"
description = ""
authors = ["Aleksey Khaleev <aleksey52nn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.11.4"
findiff = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
